# cirkit-addon-igraph

./: .gitignore  CMakeLists.txt  README.md
src/classical/cli/commands/: dswap.cpp  dswap.hpp  igraph_commands.hpp
src/classical/enumeration/: enumerate_linear_transformations.cpp  enumerate_linear_transformations.hpp
